# juliya-nails

./: .coveragerc  .gitignore  docker-compose.yml
mailu/: mailu.env
web/: Dockerfile  README.md  boot.sh  config.py  create_db.py  env_example  juliyanails.json  pyproject.toml  requirements.txt  run.py
web/docs/: conf.py  index.rst
web/migrations/versions/: 382270a349cd_.py  3822a6d2a436_.py  3902c04b6cef_.py  5241d9c88dda_.py  7e0dce936ba9_.py  a551ecd013b1_.py  b68d3e073062_.py  e56782d02fd2_.py  e7ab9bf76eda_.py  eb98b0170c0f_.py
web/tests/: conftest.py  test_JuliyaNails.py
web/tests/test_api/: test_admin.py  test_auth.py  test_entries.py  test_posts.py  test_queries.py  test_services.py  test_socials.py  test_users.py
web/website/: __init__.py  database.py  models.py  schemas.py  utils.py
web/website/api/: common copy.py  common.py
web/website/api/v1/: __init__.py  auth.py  authentication.py  entries.py  errors.py  posts.py  services.py  socials.py  users.py
web/website/auth/: forms.py  routes.py  utils.py
web/website/main/: forms.py  routes.py
web/website/static/css/: main.css
web/website/static/js/: create_entry.js  datepicker.js  edit_entry.js  main.js  phone_field.js
web/website/templates/: 404.html  405.html  _form_macro copy.html  _form_macro.html  edit_post.html  home.html  layout.html  login.html  register.html  reset.html  unconfirmed.html
web/website/templates/auth/: login.html  register.html  reset_password.html  reset_request.html  unconfirmed.html
web/website/users/: forms.py  models.py  routes.py  utils.py
(+15 files in other folders)
