[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["shadowy-pycoder <shadowy-pycoder@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-wtf = "^1.1.1"
flask-login = "^0.6.2"
psycopg2-binary = "^2.9.5"
flask-bcrypt = "^1.0.1"
flask-admin = "^1.6.1"
flask-mail = "^0.9.1"
email-validator = "^1.3.1"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
itsdangerous = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
