[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["shadowy-pycoder <shadowy-pycoder@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-wtf = "^1.1.1"
flask-login = "^0.6.2"
psycopg2-binary = "^2.9.5"
flask-bcrypt = "^1.0.1"
flask-admin = "^1.6.1"
flask-mail = "^0.9.1"
email-validator = "^1.3.1"
python-dotenv = "^1.0.0"
flask-migrate = "^4.0.4"
itsdangerous = "^2.1.2"
flask-ckeditor = "^0.4.6"
pillow = "^9.4.0"
phonenumbers = "^8.13.7"
sqlalchemy = {extras = ["mypy"], version = "^2.0.7"}
flask-httpauth = "^4.7.0"
apifairy = "^1.3.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.29.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pytest = "^7.2.2"
autopep8 = "^2.0.2"
httpie = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
